--- a/project-03.html
+++ b/project-03.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video List</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="js/project-03-start.js" defer></script>
+    <script src="project-03-start.js" defer></script>
 </head>
 <body>
     <div class="container">
